# nageru

./: .gitignore  .gitmodules  Makefile  NEWS  Nageru-Grafana.json  README  aboutdialog.ui  add_base_flow.frag  alsa_input.cpp  audio_mixer.cpp  audio_mixer.h  basic_stats.cpp  benchmark_audio_mixer.cpp  bin2h.cpp  blend.frag  cef_capture.cpp  cef_capture.h  chroma_subsampler.cpp  chroma_subsampler.h  clip_list.cpp  clip_list.h  context.cpp  db.cpp  db.h  decklink_capture.cpp  decklink_util.cpp  defs.h  densify.frag  densify.vert  derivatives.frag  diffusivity.frag  disk_space_estimator.cpp  disk_space_estimator.h  equations.frag  equations.vert  eval.cpp  ffmpeg_capture.cpp  ffmpeg_capture.h  ffmpeg_raii.h  flags.cpp  (+77 more)
debian/: changelog  control
debian/patches/: 0001-Fix-build-on-Bionic.patch  0004-Default-to-50p-frame-rate.patch  0005-Flag-for-ALSA-delay.patch  0005-Option-to-specify-input-delay-per-card.patch  0006-Reduce-QuickSync-encoding-bitrate.patch  0006-Use-ALSA-hardware-timestamp-instead-of-system-clock.patch  0007-Add-local-time-and-recording-time-in-main-window-status.patch  0008-Add-reduction-meter-in-audio-miniview.patch  0008-Flag-for-ALSA-delay.patch  0008-Reduce-post-compression-makeup-gain.patch  0010-Add-local-time-and-uptime-in-main-window-status.patch  0010-MIDI-mapping-to-control-video-mixer-and-main-UI.patch  0010-MIDI-mapping-to-control-video-mixer.patch  0010-Tentative-Decklink-capture-RGB-4-4-4-support.patch  0011-Add-reduction-meter-in-audio-miniview.patch  0011-Display-recording-time.patch  0011-Fix-a-MIDI-related-deadlock-in-the-GUI-code.patch  0012-No-semi-colon-in-recording-filenames.patch  0012-Use-ALSA-hardware-timestamp-instead-of-system-clock.patch  prefix-usr.diff  series
experiments/: measure-x264.pl
futatabi/: behringer_cmd_pl1.midimapping  clip_list.cpp  clip_list.h  db.cpp  db.h  defs.h  disk_space_estimator.cpp  disk_space_estimator.h  export.cpp  export.h  flags.cpp  flags.h  flow.cpp  flow_main.cpp  frame_on_disk.cpp  frame_on_disk.h  futatabi_midi_mapping.proto  httpd.cpp  httpd.h  jpeg_frame.h  jpeg_frame_view.cpp  jpeg_frame_view.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memcpy_interleaved.cpp  meson.build  midi_mapper.cpp  midi_mapper.h  midi_mapping_dialog.cpp  midi_mapping_dialog.h  mux.cpp  mux.h  player.cpp  player.h  queue_spot_holder.h  ref_counted_gl_sync.h  state.proto  timebase.h  (+8 more)
nageru/: aboutdialog.cpp  aboutdialog.ui  alsa_input.cpp  alsa_pool.cpp  analyzer.cpp  audio_encoder.cpp  audio_encoder.h  audio_mixer.cpp  audio_mixer.h  benchmark_audio_mixer.cpp  cef_capture.h  chroma_subsampler.cpp  decklink_capture.cpp  decklink_output.cpp  decklink_output.h  defs.h  disk_space_estimator.cpp  disk_space_estimator.h  ffmpeg_capture.cpp  ffmpeg_capture.h  ffmpeg_raii.cpp  flags.cpp  flags.h  glwidget.cpp  httpd.cpp  image_input.cpp  input_mapping.cpp  input_mapping_dialog.cpp  kaeru.cpp  main.cpp  mainwindow.cpp  memcpy_interleaved.cpp  meson.build  midi_device.cpp  midi_mapper.cpp  midi_mapper.h  midi_mapping.proto  midi_mapping_dialog.cpp  midi_mapping_dialog.h  mixer.cpp  (+24 more)
shared/: context.cpp  disk_space_estimator.cpp  disk_space_estimator.h  httpd.cpp  httpd.h  meson.build  metrics.cpp  metrics.h  midi_device.cpp  midi_device.h  midi_mapper_util.h  midi_mapping.proto  mux.cpp  mux.h  mux_opts.h  read_file.cpp  shared_defs.h
